only show delimiters if message length < limit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Twitter Splitter</title>
 	<link rel="stylesheet" href="app.css" />
 	<script src="jquery.js"></script>
+	<script src="helpers.js"></script> 
 	<script src="app.js"></script> 
 </head>
 <body>
@@ -97,7 +98,8 @@
 		<div class="table" id="writing-panel">
 			<div class="row">
 				<div class="cell input">
-					<textarea id="input" placeholder="Enter extended tweet text.">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+					<textarea id="input" placeholder="Enter extended tweet text.">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</textarea>
+          <!-- <textarea id="input" placeholder="Enter extended tweet text.">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea> -->
 				</div>
 				<div class="cell output">
 					<textarea id="output" readonly></textarea>
